test/message/fail/missing-function-name.out
*%(basename)s:5: SyntaxError: Function statements require a valid function name
function (){}
^^^^^^^^
SyntaxError: Function statements require a valid function name
